--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container mx-auto p-4 sm:p-6 md:p-8 max-w-4xl">
         <header class="text-center mb-8">
             <h1 class="text-3xl sm:text-4xl font-bold text-sky-700">심폐소생술(CPR) 퀴즈</h1>
-            <p class="mt-2 text-slate-600"> 학습한 응급처치 내용을 확인해보세요.</p>
+            <p class="mt-2 text-slate-600"> 학습한 내용을 확인해보세요.</p>
 
         <div id="quiz-container" class="space-y-6">
             </div>
@@ -50,7 +50,7 @@
     <script>
         const quizData = [
             {
-                question: "1. 축구 시합 중 심정지로 쓰러진 친구를 발견했을 때 가장 먼저 해야 할 일은 무엇인가요?",
+                question: "1. 심정지로 쓰러진 친구를 발견했을 때 가장 먼저 해야 할 일은 무엇인가요?",
                 options: ["인공호흡 시작", "119에 전화", "의식 및 호흡 확인", "가슴압박 시작"],
                 answer: "의식 및 호흡 확인"
             },
